--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ header {
 	margin: 0 auto;
 }
 
-.product-img {
-	/* width: 200px; */
+.products-container {
+	max-width: 1600px;
+	margin: 0 auto;
 }
