--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -1,5 +1,16 @@
+#products {
+	margin-top: 2em;
+}
+
+.category-heading {
+	text-align: center;
+	font-size: clamp(40px, 5vw, 60px);
+	margin: 1em 0;
+}
+
 .products-container {
-	max-width: 1600px;
-	margin: 0 auto;
-	/* background-color: lightcoral; */
+	max-width: 1700px;
+}
+
+.card-content {
 }
