--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,10 +1,8 @@
 header {
 	display: flex;
-	/* position: relative; */
 	justify-content: space-between;
 	height: 3em;
 	align-items: center;
-	overflow: hidden;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -24,4 +22,7 @@ nav {
 nav a {
 	text-decoration: none;
 	padding: 0 2em;
+}
+
+@media (max-width: 450px) {
 }
