--- a/src/components/LandingPage/landing.css
+++ b/src/components/LandingPage/landing.css
@@ -1,40 +1,42 @@
-#landing-page {
-	background-image: url('../../img/Macbook\ landscape.webp');
-	/* width: 100%; */
-	height: 600px;
-	background-size: contain;
-	background-repeat: no-repeat;
+.landing-page {
+	max-width: none;
+	padding-top: 5em;
+	display: flex;
 	background-color: black;
-	background-position: right;
+	justify-content: center;
+	align-items: center;
 	color: white;
+	height: 100vh;
 }
 
-.landing-content {
-	max-width: 700px;
+.landing-container {
+	margin-bottom: 10em;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
-	padding: 8em 0 0 5em;
+	text-align: center;
 }
 
 .landing-heading {
-	font-size: clamp(45px, 5vw, 70px);
+	font-size: clamp(45px, 5vw, 90px);
 }
 
 .landing-paragraph {
-	padding-top: 1em;
-	line-height: 1.5;
-	width: clamp(45ch, 50%, 75ch);
+	font-size: clamp(22px, 5vw, 40px);
+}
+
+.macbook-img {
+	width: 70em;
+}
+
+@media (max-width: 1130px) {
+	.macbook-img {
+		width: 100vw;
+	}
 }
 
 @media (max-width: 560px) {
-	#landing-page {
-		background-image: url('../../img/Macbook\ Portrait.webp');
-		/* background-size: 100% 100%; */
-		height: 100vh;
-		background-position: bottom;
-	}
-
 	.landing-content {
 		padding: 2em 1em;
 	}
@@ -42,7 +44,6 @@
 	.landing-heading {
 		text-align: center;
 	}
-
 	.landing-paragraph {
 		width: 100%;
 	}
