--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,27 +1,26 @@
 header {
+	margin: 0 auto;
 	display: flex;
 	justify-content: space-between;
 	height: 3em;
 	align-items: center;
 	position: fixed;
 	top: 0;
+	left: 0;
+	right: 0;
 	width: 100%;
-	max-width: 1700px;
-	background-color: #fff;
+	/* max-width: 1700px; */
+	background-color: black;
 	z-index: 15;
 }
 
 nav {
-	/* display: flex; */
-	/* background-color: #fff; */
-	/* justify-content: space-evenly; */
-	/* align-items: center; */
-	/* width: 20%; */
+	margin-right: 0.5em;
 }
 
 nav a {
 	text-decoration: none;
-	padding: 0 2em;
+	padding: 0 1em;
 }
 
 @media (max-width: 450px) {
