Added landing page animations & fixed navbar

--- a/src/components/LandingPage/landing.css
+++ b/src/components/LandingPage/landing.css
@@ -20,14 +20,51 @@
 
 .landing-heading {
 	font-size: clamp(45px, 5vw, 90px);
+	opacity: 0;
+	animation: macbook 1s 1.5s ease-out forwards;
 }
 
 .landing-paragraph {
 	font-size: clamp(22px, 5vw, 40px);
+	opacity: 0;
+	animation: macbook 1s 2s ease-out forwards;
+}
+
+.landing-btns {
+	display: flex;
+	flex-direction: column;
+	opacity: 0;
+	animation: buttons 1s 2.1s ease-out forwards;
 }
 
 .macbook-img {
 	width: 70em;
+	animation: Rise 1.7s ease-out;
+}
+
+@keyframes Rise {
+	0% {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+}
+
+@keyframes macbook {
+	0% {
+		transform: translateY(-5px);
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes buttons {
+	0% {
+		transform: translateY(10px);
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 @media (max-width: 1130px) {
